# Health_AI

./: .dockerignore  .env  .env.prod  .gitignore  Dockerfile  agentv1.py  ai.md  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml
app/: main.py
app/application/prompts/: conversation_prompts.py
app/application/services/: conversation_service.py
app/application/workflows/: main_conversation_flow.py  main_workflow_state.py
app/application/workflows/sheduling_subflow/: sheduling_logic.py  sheduling_state.py
app/core/: config.py
app/domain/models/: user_profile.py
app/infrastructure/: llm_clients.py
app/infrastructure/clients/: whatsapp_client.py  zapi_client.py
app/interfaces/api/v1/endpoints/: whatsapp_webhook.py  zapi_webhook.py
app/interfaces/models/: whatsapp_payload.py  zapi_payload.py
