[tool.poetry]
name = "health-ai"
version = "0.1.0"
description = "Add your description here"
authors = ["Erick Marinho <erickgaves@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12, <4.0"
fastapi = {version = ">=0.115.12", extras = ["standard"]}
pydantic-ai = ">=0.1.10"
python-dotenv = ">=1.1.0"
uvicorn = ">=0.34.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
